# Qubit

./: CMakeLists.txt  LICENSE  Qubit.sln  README.md
Qubit/: CMakeLists.txt  Qubit.sln  Qubit.vcxproj  Qubit.vcxproj.filters
Qubit/Assimp/: Assimp.vcxproj  Assimp.vcxproj.filters
Qubit/Assimp/lib/: assimp-vc142-mtd.exp
Qubit/GLAD/: GLAD.vcxproj
Qubit/GLAD/include/glad/: glad.h
Qubit/GLAD/src/: glad.c
Qubit/GLFW/: GLFW.vcxproj  GLFW.vcxproj.filters
Qubit/GLM/: GLM.vcxproj
Qubit/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters  imgui.ini  imgui_internal.h
Qubit/Qubit/: Qubit.vcxproj  Qubit.vcxproj.filters
Qubit/Qubit/src/include/: Qubit.h
Qubit/SPDLOG/: SPDLOG.vcxproj  SPDLOG.vcxproj.filters
Qubit/Sandbox/: Sandbox.vcxproj  Sandbox.vcxproj.filters  imgui.ini
Qubit/Sandbox/src/: main.cpp
Qubit/bin-int/Debug-x64/ImGui/: ImGui.dll.recipe
Qubit/bin-int/Debug-x64/Qubit/: Qubit.dll.recipe  vc142.idb
Qubit/bin-int/Debug-x64/SPDLOG/: SPDLOG.dll.recipe  vc142.idb
Qubit/bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  vc142.idb
Qubit/bin-int/Release-x64/Qubit/: Qubit.dll.recipe
Qubit/bin-int/Release-x64/Sandbox/: Sandbox.exe.recipe
Qubit/src/: qbtpch.cpp  qbtpch.h
Qubit/src/Qubit/Kernel/: Application.cpp  Application.h  Entrypoint.h  Logger.cpp  Logger.h
Qubit/vendors/glad/src/: glad.c
Sandbox/: Sandbox.vcxproj
Sandbox/src/: main.cpp
bin-int/x64/Debug/: Qubit.dll.recipe  Qubit.ilk  Sandbox.exe.recipe  Sandbox.ilk  vc142.idb
bin-int/x64/Debug/Qubit.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Qubit.lastbuildstate  (+5 more)
(+62 files in other folders)
